[gd_scene load_steps=145 format=2]

[ext_resource path="res://Dennis.gd" type="Script" id=1]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00009.png" type="Texture" id=2]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00010.png" type="Texture" id=3]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00003.png" type="Texture" id=4]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00001.png" type="Texture" id=5]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00002.png" type="Texture" id=6]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00004.png" type="Texture" id=7]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00006.png" type="Texture" id=8]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00011.png" type="Texture" id=9]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00005.png" type="Texture" id=10]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00012.png" type="Texture" id=11]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00007.png" type="Texture" id=12]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00008.png" type="Texture" id=13]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00000.png" type="Texture" id=14]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00013.png" type="Texture" id=15]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00025.png" type="Texture" id=16]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00011.png" type="Texture" id=17]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00026.png" type="Texture" id=18]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00033.png" type="Texture" id=19]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00095.png" type="Texture" id=20]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00035.png" type="Texture" id=21]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00085.png" type="Texture" id=22]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00010.png" type="Texture" id=23]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00086.png" type="Texture" id=24]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00036.png" type="Texture" id=25]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00094.png" type="Texture" id=26]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00015.png" type="Texture" id=27]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00018.png" type="Texture" id=28]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00029.png" type="Texture" id=29]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00039.png" type="Texture" id=30]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00014.png" type="Texture" id=31]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00017.png" type="Texture" id=32]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00090.png" type="Texture" id=33]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00087.png" type="Texture" id=34]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00000.png" type="Texture" id=35]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00013.png" type="Texture" id=36]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00023.png" type="Texture" id=37]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00027.png" type="Texture" id=38]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00001.png" type="Texture" id=39]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00012.png" type="Texture" id=40]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00034.png" type="Texture" id=41]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00040.png" type="Texture" id=42]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00021.png" type="Texture" id=43]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00084.png" type="Texture" id=44]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00019.png" type="Texture" id=45]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00031.png" type="Texture" id=46]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00092.png" type="Texture" id=47]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00093.png" type="Texture" id=48]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00006.png" type="Texture" id=49]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00024.png" type="Texture" id=50]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00041.png" type="Texture" id=51]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00037.png" type="Texture" id=52]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00038.png" type="Texture" id=53]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00009.png" type="Texture" id=54]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00008.png" type="Texture" id=55]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00022.png" type="Texture" id=56]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00032.png" type="Texture" id=57]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00091.png" type="Texture" id=58]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00003.png" type="Texture" id=59]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00004.png" type="Texture" id=60]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00042.png" type="Texture" id=61]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00002.png" type="Texture" id=62]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00005.png" type="Texture" id=63]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00016.png" type="Texture" id=64]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00020.png" type="Texture" id=65]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00007.png" type="Texture" id=66]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00028.png" type="Texture" id=67]
[ext_resource path="res://assets/Dennis Run png/ScaryRun_00030.png" type="Texture" id=68]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00089.png" type="Texture" id=69]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00088.png" type="Texture" id=70]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00047.png" type="Texture" id=71]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00030.png" type="Texture" id=72]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00036.png" type="Texture" id=73]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00041.png" type="Texture" id=74]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00031.png" type="Texture" id=75]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00048.png" type="Texture" id=76]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00054.png" type="Texture" id=77]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00072.png" type="Texture" id=78]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00068.png" type="Texture" id=79]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00073.png" type="Texture" id=80]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00043.png" type="Texture" id=81]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00074.png" type="Texture" id=82]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00019.png" type="Texture" id=83]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00058.png" type="Texture" id=84]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00063.png" type="Texture" id=85]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00075.png" type="Texture" id=86]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00025.png" type="Texture" id=87]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00017.png" type="Texture" id=88]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00076.png" type="Texture" id=89]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00077.png" type="Texture" id=90]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00061.png" type="Texture" id=91]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00049.png" type="Texture" id=92]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00055.png" type="Texture" id=93]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00053.png" type="Texture" id=94]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00021.png" type="Texture" id=95]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00056.png" type="Texture" id=96]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00040.png" type="Texture" id=97]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00026.png" type="Texture" id=98]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00034.png" type="Texture" id=99]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00018.png" type="Texture" id=100]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00032.png" type="Texture" id=101]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00037.png" type="Texture" id=102]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00046.png" type="Texture" id=103]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00023.png" type="Texture" id=104]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00014.png" type="Texture" id=105]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00050.png" type="Texture" id=106]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00028.png" type="Texture" id=107]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00038.png" type="Texture" id=108]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00051.png" type="Texture" id=109]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00015.png" type="Texture" id=110]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00057.png" type="Texture" id=111]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00060.png" type="Texture" id=112]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00062.png" type="Texture" id=113]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00024.png" type="Texture" id=114]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00052.png" type="Texture" id=115]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00044.png" type="Texture" id=116]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00064.png" type="Texture" id=117]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00066.png" type="Texture" id=118]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00039.png" type="Texture" id=119]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00027.png" type="Texture" id=120]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00016.png" type="Texture" id=121]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00020.png" type="Texture" id=122]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00033.png" type="Texture" id=123]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00059.png" type="Texture" id=124]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00045.png" type="Texture" id=125]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00065.png" type="Texture" id=126]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00022.png" type="Texture" id=127]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00067.png" type="Texture" id=128]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00042.png" type="Texture" id=129]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00035.png" type="Texture" id=130]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00069.png" type="Texture" id=131]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00070.png" type="Texture" id=132]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00071.png" type="Texture" id=133]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00029.png" type="Texture" id=134]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00078.png" type="Texture" id=135]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00080.png" type="Texture" id=136]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00083.png" type="Texture" id=137]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00082.png" type="Texture" id=138]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00079.png" type="Texture" id=139]
[ext_resource path="res://assets/Dennis Walk png/Dennis Walk png/ScaryWalk_00081.png" type="Texture" id=140]

[sub_resource type="CircleShape2D" id=3]
radius = 25.02

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 39 ), ExtResource( 62 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 63 ), ExtResource( 49 ), ExtResource( 66 ), ExtResource( 55 ), ExtResource( 54 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 40 ), ExtResource( 36 ), ExtResource( 31 ), ExtResource( 27 ), ExtResource( 64 ), ExtResource( 32 ), ExtResource( 28 ), ExtResource( 45 ), ExtResource( 65 ), ExtResource( 43 ), ExtResource( 56 ), ExtResource( 37 ), ExtResource( 50 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 38 ), ExtResource( 67 ), ExtResource( 29 ), ExtResource( 68 ), ExtResource( 46 ), ExtResource( 57 ), ExtResource( 19 ), ExtResource( 41 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 30 ), ExtResource( 42 ), ExtResource( 51 ), ExtResource( 61 ) ],
"loop": true,
"name": "run",
"speed": 24.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 105 ), ExtResource( 110 ), ExtResource( 121 ), ExtResource( 88 ), ExtResource( 100 ), ExtResource( 83 ), ExtResource( 122 ), ExtResource( 95 ), ExtResource( 127 ), ExtResource( 104 ), ExtResource( 114 ), ExtResource( 87 ), ExtResource( 98 ), ExtResource( 120 ), ExtResource( 107 ), ExtResource( 134 ), ExtResource( 72 ), ExtResource( 75 ), ExtResource( 101 ), ExtResource( 123 ), ExtResource( 99 ), ExtResource( 130 ), ExtResource( 73 ), ExtResource( 102 ), ExtResource( 108 ), ExtResource( 119 ), ExtResource( 97 ), ExtResource( 74 ), ExtResource( 129 ), ExtResource( 81 ), ExtResource( 116 ), ExtResource( 125 ), ExtResource( 103 ), ExtResource( 71 ), ExtResource( 76 ), ExtResource( 92 ), ExtResource( 106 ), ExtResource( 109 ), ExtResource( 115 ), ExtResource( 94 ), ExtResource( 77 ), ExtResource( 93 ), ExtResource( 96 ), ExtResource( 111 ), ExtResource( 84 ), ExtResource( 124 ), ExtResource( 112 ), ExtResource( 91 ), ExtResource( 113 ), ExtResource( 85 ), ExtResource( 117 ), ExtResource( 126 ), ExtResource( 118 ), ExtResource( 128 ), ExtResource( 79 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 78 ), ExtResource( 80 ), ExtResource( 82 ), ExtResource( 86 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 135 ), ExtResource( 139 ), ExtResource( 136 ), ExtResource( 140 ), ExtResource( 138 ), ExtResource( 137 ), ExtResource( 44 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 34 ), ExtResource( 70 ), ExtResource( 69 ), ExtResource( 33 ), ExtResource( 58 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 26 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 354.361

[sub_resource type="CapsuleShape2D" id=4]
radius = 26.0
height = 174.0

[node name="Dennis" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 90 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "walk"
frame = 25
playing = true

[node name="DetectPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 4 )

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
